fixed navlogo link by removing z-index from .secondary css

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,14 +51,11 @@ body {
   flex-direction: column;
   justify-content: space-between;
   color: white;
-  z-index: -1;
-
   position: fixed;
   top: 0;
   left: 0;
   height: 100vh;
   width: 25%;
-  /* z-index: 100; */
 }
 .tertiary {
   width: 7.5vw;
